// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

=====================================output=====================================

================================================================================
`;

exports[`nonascii.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// Has codepoint 0x1f60a. Represented by 4 bytes in both UTF-16 and UTF-8.
// 😊

const foo = bar;

=====================================output=====================================
// Has codepoint 0x1f60a. Represented by 4 bytes in both UTF-16 and UTF-8.
// 😊

const foo = bar;

================================================================================
`;
